United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6788376 allow to ignore unrecognized VM options
6788376 : allow to ignore unrecognized VM options

Details
Type:
Bug
Submit Date:
2008-12-23
Status:
Resolved
Updated Date:
2010-05-05
Project Name:
JDK
Resolved Date:
2009-02-27
Component:
hotspot
OS:
generic
Sub-Component:
test
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs14,6u10
Fixed Versions:
hs15

Related Reports
Backport:
Backport:
Backport:
Duplicate:
Relates:

Sub Tasks

Description
See comments.
Problem:
Hotspot has flags which could be unavailable in different
VM versions (server vs client, product vs debug).
It complicates VM testing.

Solution:
Add new product flag -XX:+IgnoreUnrecognizedVMOptions to allow
ignore unrecognized VM options and execute a java program.
By default it is off.

                                    

Comments
EVALUATION

The fix has been verified as part of hs15-b02 pit.
                                     
2009-02-24
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/323728917cf4
                                     
2009-02-06
SUGGESTED FIX

Add new -XX product flag -XX:+IgnoreUnrecognizedVMOptions to allow ignore unrecognized VM options and execute a java program. By default it is off.
                                     
2009-01-05
EVALUATION

Hotspot JVM has flags which could be unavailable in different VM versions (server vs client, product vs debug). It complicates JVM testing since JVM aborts a java program execution if there are specified options which are unavailable (unrecognized).
                                     
2009-01-05
SUGGESTED FIX

Add the flag to the test compiler/6775880/Test.java
to run it with product VM (DeoptimizeALot flag is
the debug flag unavailable in product VM).
                                     
2008-12-24



Hardware and Software, Engineered to Work Together